# pacer-ai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml
data/: knowledge_points.yaml
docs/superpowers/plans/: 2026-05-18-stage-1-skeleton.md  2026-05-18-stage-2-orchestration.md  2026-05-18-stage-3-active-companion.md  2026-05-18-stage-4-mood-polish.md  2026-05-19-frontend-phase-1.md  2026-05-19-frontend-phase-2.md  2026-05-19-frontend-phase-3-4.md  2026-05-21-error-review-closed-loop.md  2026-05-21-mastery-visualization.md  2026-05-21-plan-task-checkoff.md
docs/superpowers/specs/: 2026-05-18-ai-edu-companion-design.md  2026-05-19-frontend-optimization-design.md  2026-05-21-feature-roadmap-design.md  (+1 more)
scripts/: backfill_task_ids.py  seed_dev_student.py  seed_knowledge_points.py
src/pacer/: config.py
src/pacer/agent/: __init__.py  (+2 more)
tests/api/: test_mastery_start_review.py  test_message_streaming.py  test_plan_checkoff.py  test_sessions_api.py  test_start_review.py  test_static_serving.py
tests/e2e/: test_chat_flow.py  test_error_review_flow.py  test_image_history.py  test_login_lockout.py  test_red_line.py
tests/integration/: test_agent_with_tools.py  test_message_endpoint.py
tests/unit/: test_auth_route.py  test_backfill_task_ids.py  test_config.py  test_db_models.py  test_events.py  test_llm_client.py  test_loop.py  test_memory.py  test_memory_tools.py  test_plan_tools_ids.py  test_seed_kp.py  test_session_store.py  test_streaming.py  test_streaming_store.py  test_tool_registry.py
(+130 files in other folders)
